--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-draggable": "^4.4.5",
+    "react-moveable": "^0.32.7",
+    "react-resizable": "^3.0.4",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
