--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
     "dependencies": {
         "child_process": "^1.0.2",
         "express": "^4.18.1",
-        "socket.io": "^4.5.0"
+        "socket.io": "^4.5.0",
+        "wrtc": "^0.4.7"
     },
     "scripts": {
         "start": "cross-env NODE_ENV=development nodemon -w . .",
