--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,20 +1,21 @@
-FROM node:8.10.0 as builder
+FROM node:17-alpine as builder
 
 # 작업 폴더를 만들고 npm 설치
+RUN mkdir /usr/src
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
-COPY package.json /usr/src/app/package.json
-RUN npm install --silent
-RUN npm install react-scripts@2.1.3 -g --silent
+RUN npm i -g npm
+# RUN npm install --save
 
 # 소스를 작업폴더로 복사하고 빌드
 COPY . /usr/src/app
+RUN npm rebuild node-sass
 RUN npm run build
 
 
 
-FROM nginx:1.13.9-alpine
+FROM nginx:alpine
 # nginx의 기본 설정을 삭제하고 앱에서 설정한 파일을 복사
 RUN rm -rf /etc/nginx/conf.d
 COPY conf /etc/nginx
@@ -24,4 +25,5 @@ COPY --from=builder /usr/src/app/build /usr/share/nginx/html
 
 # 80포트 오픈하고 nginx 실행
 EXPOSE 80
+EXPOSE 443
 CMD ["nginx", "-g", "daemon off;"]
