--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
         "react-draggable": "^4.4.5",
         "react-moveable": "^0.32.7",
         "react-resizable": "^3.0.4",
+        "react-router": "^6.3.0",
+        "react-router-dom": "^6.3.0",
         "socket.io-client": "^4.5.0",
         "stream": "^0.0.2",
         "util": "^0.12.4",
