--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^13.5.0",
         "classnames": "^2.3.1",
+        "lodash": "^4.17.21",
         "node-sass": "^7.0.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
@@ -18,9 +19,8 @@
         "react-resizable": "^3.0.4",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
+        "react-textarea-autosize": "^8.3.4",
         "socket.io-client": "^4.5.0",
-        "stream": "^0.0.2",
-        "util": "^0.12.4",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
