--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
         "react-resizable": "^3.0.4",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
+        "react-spring": "^9.5.2",
         "react-textarea-autosize": "^8.3.4",
         "socket.io-client": "^4.5.0",
         "web-vitals": "^2.1.4"
