--- a/client/.env.development
+++ b/client/.env.development
@@ -1,3 +1,4 @@
 PORT=3000
 REACT_APP_HOST='localhost'
-REACT_APP_SERVER='http://localhost:8080'
+REACT_APP_SERVER='https://localhost:8080'
+HTTPS=true
