--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
         "react-router-dom": "^6.3.0",
         "react-spring": "^9.5.2",
         "react-textarea-autosize": "^8.3.4",
+        "react-youtube": "^10.0.0",
         "socket.io-client": "^4.5.0",
         "web-vitals": "^2.1.4"
     },
@@ -30,7 +31,7 @@
         "react-scripts": "^5.0.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "cross-env HTTPS=true react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
