--- a/client/conf/conf.d/default.conf
+++ b/client/conf/conf.d/default.conf
@@ -12,12 +12,17 @@ server {
     server_name  qrmoo.mooo.com;
     root         /usr/share/nginx/html;
     server_name  localhost;
+    server_name  $uri;
     index index.html index.htm;
 
-    ssl_certificate      /etc/nginx/cert/fullchain2.pem;
-    ssl_certificate_key  /etc/nginx/cert/privkey2.pem;
+    ssl_certificate      /etc/nginx/cert/fullchain.pem;
+    ssl_certificate_key  /etc/nginx/cert/privkey.pem;
     ssl_session_timeout  5m;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers  "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
     ssl_prefer_server_ciphers   on;
+
+    location / {
+      try_files $uri /index.html;
+    }
 }
