--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "dependencies": {
         "child_process": "^1.0.2",
         "express": "^4.18.1",
+        "node-pre-gyp": "^0.17.0",
         "socket.io": "^4.5.0",
         "wrtc": "^0.4.7"
     },
