--- a/web2stream/package.json
+++ b/web2stream/package.json
@@ -11,8 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "async-child-process": "^1.1.1",
         "ffmpeg-installer": "^1.0.2",
         "puppeteer": "^17.1.3",
-        "puppeteer-screen-recorder": "^2.1.1"
+        "puppeteer-screen-recorder": "^2.1.1",
+        "winston": "^3.8.2"
     }
 }
