--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
         "dotenv": "^16.0.2",
         "dotenv-expand": "^9.0.0",
         "express": "^4.18.1",
+        "mongoose": "^6.6.1",
         "node-pre-gyp": "^0.17.0",
         "socket.io": "^4.5.0",
         "wrtc": "^0.4.7"
