--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "lodash": "^4.17.21",
         "node-sass": "^7.0.1",
         "react": "^18.0.0",
+        "react-autosuggest": "^10.1.0",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.0.0",
