--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.1.1",
-        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/free-brands-svg-icons": "^6.2.0",
+        "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.1.18",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
@@ -18,6 +19,7 @@
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.0.0",
         "react-draggable": "^4.4.5",
+        "react-hls-player": "^3.0.7",
         "react-moveable": "^0.32.7",
         "react-resizable": "^3.0.4",
         "react-router": "^6.3.0",
